# secwiz

./: .gitignore  IMPLEMENTATION_PLAN.md  PLATFORM_FLOW.md  SECURITY_ALERTS_PRD.md  render.yaml  wire-platforms.txt
backend/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: health.py  onboard.py  runs.py  wire_catalog.py
backend/app/queue/: celery_app.py  scheduler.py  tasks.py
backend/app/schemas/: catalog.py  common.py  onboard.py
backend/app/services/: email_sender.py  gemini.py
backend/app/services/anakin/: agentic.py  client.py  crawl.py  search.py  structured_intel.py  url_scraper.py  wire.py
backend/app/services/pipeline/: alert.py  cluster.py  ingest.py  judge.py  match.py  normalize.py  score.py
backend/app/store/: ids.py  json_store.py  models.py
backend/data/: .gitkeep
backend/scripts/: clear_user_alerts.py  reset_user_pipeline_state.py  send_test_email.py  smoke.py
backend/tests/: conftest.py  test_anakin_client.py  test_api.py  test_email_sender.py  test_ingest.py  test_judge.py  test_live_anakin.py  test_live_gemini.py  test_pipeline.py  test_store.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/api/trigger/: route.ts
frontend/app/onboard/: page.tsx
frontend/app/onboarded/: page.tsx
frontend/components/: Step1EmailDeps.tsx  Step2Sources.tsx  Stepper.tsx
frontend/lib/: api.ts  parse-deps.ts  types.ts
