[project]
name = "security-alerts-copilot"
version = "0.1.0"
description = "Security Alerts Copilot backend (V1) — FastAPI + JsonStore + eager Celery + APScheduler."
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.5,<3",
    "httpx>=0.27,<0.29",
    "celery>=5.4,<6",
    "APScheduler>=3.10,<4",
    "filelock>=3.15,<4",
    "python-dotenv>=1.0,<2",
    "python-ulid>=2.4,<3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
